--- a/template-driven-forms/src/app/app.component.html
+++ b/template-driven-forms/src/app/app.component.html
@@ -15,9 +15,16 @@
     </div>
 
     <div class="form-group">
-      <label>Name</label>
+      <label>First Name</label>
       <input type="text" required #name="ngModel" class="form-control" [class.is-invalid]="name.invalid && name.touched"
-        [(ngModel)]="userModel.name" name="userName">
+        [(ngModel)]="userModel.firstName" name="firstName">
+      <!--<small class = "text-danger" *ngIf="name.invalid && name.touched">*Required</small>-->
+      <small class="text-danger" [class.d-none]="name.valid || name.untouched">*Required</small>
+    </div>
+    <div class="form-group">
+      <label>Last Name</label>
+      <input type="text" required #name="ngModel" class="form-control" [class.is-invalid]="name.invalid && name.touched"
+        [(ngModel)]="userModel.lastName" name="lastName">
       <!--<small class = "text-danger" *ngIf="name.invalid && name.touched">*Required</small>-->
       <small class="text-danger" [class.d-none]="name.valid || name.untouched">*Required</small>
     </div>
